feat(build): electron-builder 설정 및 윈도우 배포 시스템 구축
- electron-builder 설정으로 NSIS 설치형 및 포터블 빌드 지원
- 자동 업데이트 시스템 추가 (기본 비활성화)
- 프로덕션 빌드 스크립트 및 환경 분리 개선
- Windows 배포 가이드 문서화 완료

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,14 +1,51 @@
-appId: com.example.ai-terminal
+appId: com.lisyoen.ai-terminal
 productName: AI Terminal
 directories:
-  output: release
+  output: dist/release
+  buildResources: build
 files:
-  - dist/**/*
-  - node_modules/**/*
-  - scripts/**/*
+  - "dist/**"
+  - "package.json"
+  - "!**/*.map"
+  - "!**/node_modules/.cache/**"
+  - "!src/**"
+  - "!electron/**"
+  - "!types/**"
+  - "!.env"
+  - "!.env.*"
+  - "!*.config.*"
+  - "!tsconfig.json"
+win:
+  target:
+    - target: nsis
+      arch:
+        - x64
+  artifactName: "AI-Terminal-${version}-Setup.${ext}"
+  legalTrademarks: "lisyoen"
+  sign: false
+  certificateFile: null
+  certificatePassword: null
+nsis:
+  oneClick: true
+  perMachine: false
+  allowToChangeInstallationDirectory: false
+  createDesktopShortcut: true
+  createStartMenuShortcut: true
+  displayLanguageSelector: false
+  installerLanguages:
+    - en_US
+    - ko_KR
+  warningsAsErrors: false
+portable:
+  artifactName: "AI-Terminal-${version}-Portable.${ext}"
 mac:
   target: dmg
-win:
-  target: nsis
 linux:
   target: AppImage
+publish: never   # 자동 배포 비활성화(수동 릴리스)
+compression: normal
+electronDownload:
+  cache: .electron-cache
+afterSign: false
+beforeBuild: false
+forceCodeSigning: false
