--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.5.0",
   "description": "Electron app with terminal and AI chat panel featuring SSH execution, session logging, and command history",
   "type": "commonjs",
-  "main": "dist/electron/main.js",
+  "main": "dist/electron/electron/main.js",
   "homepage": "./",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:electron && npm run build:renderer",
+    "build": "npm run build:renderer && npm run build:electron",
     "build:electron": "tsc",
     "build:renderer": "vite build",
-    "electron": "electron dist/electron/main.js",
+    "electron": "electron dist/electron/electron/main.js",
     "start": "npm run build && npm run electron",
+    "start:prod": "electron dist/electron/electron/main.js",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:portable": "npm run build && electron-builder --dir --win",
+    "dist": "npm run build && electron-builder",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "clean": "rimraf dist release"
@@ -40,28 +44,43 @@
     "@vitejs/plugin-react": "^4.1.0",
     "electron": "^32.0.0",
     "electron-builder": "^24.6.4",
+    "electron-updater": "^6.1.4",
     "eslint": "^8.51.0",
     "typescript": "^5.2.0",
     "vite": "^5.0.0"
   },
   "build": {
-    "appId": "com.example.ai-terminal",
+    "appId": "com.lisyoen.ai-terminal",
     "productName": "AI Terminal",
     "directories": {
-      "output": "release"
+      "output": "release",
+      "buildResources": "build"
     },
     "files": [
-      "dist/**/*",
-      "node_modules/**/*"
+      "dist/**",
+      "package.json",
+      "!**/*.map",
+      "!**/node_modules/.cache/**"
     ],
-    "mac": {
-      "target": "dmg"
-    },
     "win": {
-      "target": "nsis"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "artifactName": "AI-Terminal-${version}-Setup.${ext}",
+      "legalTrademarks": "lisyoen"
     },
-    "linux": {
-      "target": "AppImage"
-    }
+    "nsis": {
+      "oneClick": true,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": false,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    },
+    "publish": "never"
   }
 }
