feat(installer): NSIS 인스톨러 커스터마이징 구성
- electron-builder.yml: oneClick=false, 설치 디렉토리 변경 허용, 라이선스 동의 추가
- build/license.txt: MIT 라이선스 기반 설치 시 동의 텍스트 파일 생성
- artifactName: AI-Terminal-\-Setup.exe 형식으로 설정
- 코드 서명 비활성화로 개발자 빌드 환경 유지
- 데스크톱/시작메뉴 바로가기 생성 설정

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -22,30 +22,31 @@ win:
         - x64
   artifactName: "AI-Terminal-${version}-Setup.${ext}"
   legalTrademarks: "lisyoen"
-  sign: false
-  certificateFile: null
-  certificatePassword: null
 nsis:
-  oneClick: true
+  oneClick: false
   perMachine: false
-  allowToChangeInstallationDirectory: false
+  allowToChangeInstallationDirectory: true
+  allowElevation: true
   createDesktopShortcut: true
   createStartMenuShortcut: true
   displayLanguageSelector: false
+  license: "build/license.txt"
   installerLanguages:
     - en_US
     - ko_KR
   warningsAsErrors: false
+  shortcutName: "AI Terminal"
+  menuCategory: true
+  deleteAppDataOnUninstall: false
+  runAfterFinish: false
 portable:
   artifactName: "AI-Terminal-${version}-Portable.${ext}"
 mac:
   target: dmg
 linux:
   target: AppImage
-publish: never   # 자동 배포 비활성화(수동 릴리스)
 compression: normal
 electronDownload:
   cache: .electron-cache
 afterSign: false
-beforeBuild: false
 forceCodeSigning: false
