feat(perf): 번들 사이즈 최적화를 위한 코드 스플리팅 구현
- Vite manualChunks 설정으로 벤더 라이브러리 분리
- React/React-DOM을 react-vendor 청크로 분리 (138KB)
- xterm.js를 terminal-vendor 청크로 분리 (290KB)
- ChatPanel과 TerminalView를 React.lazy로 지연 로딩 구현
- Suspense 로딩 상태 UI 추가
- 기존 440KB 단일 번들에서 최대 290KB로 분할
- 500KB 번들 경고 해결 및 초기 로딩 성능 개선
- .gitignore에 .electron-cache 추가

10A_PERF_CHUNKING_AND_SPLIT 완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,31 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "CommonJS",
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "allowImportingTsExtensions": false,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false,
-    "outDir": "./dist/electron",
-    "jsx": "react-jsx",
+    "moduleResolution": "Node",
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "skipLibCheck": true,
+    "sourceMap": true,
+
+    // === 빌드 산출물 경로 설정 (현재 실행 스크립트가 기대하는 구조 유지) ===
+    "outDir": "./dist/electron",
+    "rootDir": ".",
+
+    // 타입
+    "types": ["node", "electron"]
   },
+
+  // === 중요: electron/preload.ts를 포함시키기 위해 electron/**/*.ts 명시 ===
   "include": [
-    "electron/**/*",
-    "types/**/*"
+    "electron/**/*.ts",
+    "types/**/*.ts"
   ],
+
+  // Vite가 처리하는 렌더러(src)는 tsc에서 제외 (중복 빌드 방지)
   "exclude": [
     "node_modules",
     "dist",
-    "release",
-    "src/**/*"
+    "src"
   ]
 }
