--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -22,6 +22,7 @@ win:
         - x64
   artifactName: "AI-Terminal-${version}-Setup.${ext}"
   legalTrademarks: "lisyoen"
+  sign: null
 nsis:
   oneClick: false
   perMachine: false
